@@ -2,6 +2,10 @@ update-manager (1:0.97.1) jaunty; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - make the gconf handling more robust (LP: #320586)
+  * UpdateManager/Core/MyCache.py:
+    - fix crash when no changelog can be found (LP: #320894)
+  * UpdateManager/Core/MetaRelease.py:
+    - do not crash on disk full (LP: #321872)
 
  --
 
